tests/snapshots/asm_snapshots__asm_i128_mul_s390x@s390x-unknown-linux-gnu.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
<bigints::i128::Int128 as core::ops::arith::Mul>::mul:
	stmg %r12, %r15, 96(%r15)
	llgfr %r0, %r3
	srlg %r13, %r3, 32
	llgfr %r12, %r5
	srlg %r14, %r5, 32
	lgr %r1, %r12
	msgr %r1, %r0
	msgr %r0, %r14
	msgr %r12, %r13
	msgr %r14, %r13
	algr %r12, %r0
	sllg %r0, %r12, 32
	srlg %r12, %r12, 32
	llihl %r13, 1
	jnle .LBB_2
	lghi %r13, 0
.LBB_2:
	msgr %r4, %r3
	msgr %r5, %r2
	agr %r5, %r4
	agr %r5, %r14
	agr %r5, %r12
	algr %r0, %r1
	alcgr %r5, %r13
	lgr %r2, %r5
	lgr %r3, %r0
	lmg %r12, %r15, 96(%r15)
	br %r14
