tests/snapshots/asm_snapshots__asm_i128_sub@aarch64-unknown-linux-gnu.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
.section .text.<bigints::i128::Int128 as core::ops::arith::Sub>::sub,"ax",@progbits
	.globl	<bigints::i128::Int128 as core::ops::arith::Sub>::sub
	.p2align	2
.type	<bigints::i128::Int128 as core::ops::arith::Sub>::sub,@function
<bigints::i128::Int128 as core::ops::arith::Sub>::sub:
	.cfi_startproc
	subs x0, x0, x2
	sub x8, x1, x3
	cset w9, lo
	sub x1, x8, x9
	ret
