tests/snapshots/asm_snapshots__asm_i128_sub_riscv@riscv64gc-unknown-linux-gnu.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
.section .text.<bigints::i128::Int128 as core::ops::arith::Sub>::sub,"ax",@progbits
	.globl	<bigints::i128::Int128 as core::ops::arith::Sub>::sub
	.p2align	1
.type	<bigints::i128::Int128 as core::ops::arith::Sub>::sub,@function
<bigints::i128::Int128 as core::ops::arith::Sub>::sub:
	.cfi_startproc
	sub a4, a0, a2
	sltu a0, a0, a2
	sub a1, a1, a3
	sub a1, a1, a0
	mv a0, a4
	ret
