tests/snapshots/asm_snapshots__asm_i256_add.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
.section .text.<bigints::i256::Int256 as core::ops::arith::Add>::add,"ax",@progbits
	.globl	<bigints::i256::Int256 as core::ops::arith::Add>::add
	.p2align	4
.type	<bigints::i256::Int256 as core::ops::arith::Add>::add,@function
<bigints::i256::Int256 as core::ops::arith::Add>::add:
	.cfi_startproc
	mov rcx, qword ptr [rdx]
	add rcx, qword ptr [rsi]
	mov r8, qword ptr [rdx + 8]
	adc r8, qword ptr [rsi + 8]
	mov r9, qword ptr [rdx + 16]
	adc r9, qword ptr [rsi + 16]
	mov rax, rdi
	mov rdx, qword ptr [rdx + 24]
	adc rdx, qword ptr [rsi + 24]
	mov qword ptr [rdi], rcx
	mov qword ptr [rdi + 8], r8
	mov qword ptr [rdi + 16], r9
	mov qword ptr [rdi + 24], rdx
	ret
